# ghostdq-sdk

./: .gitignore  LICENSE  README.md  llm-context.txt  pyproject.toml
.github/workflows/: publish-beta-pypi.yml  publish-pypi.yml
src/ghostdq/: __init__.py  cli.py  client.py  contract.py  evaluate.py  io_pandas.py  metrics.py
src/ghostdq/cli/: __init__.py  run.py
src/ghostdq/contract/: __init__.py  models.py  parser.py
src/ghostdq/evaluation/: __init__.py  evaluator.py  models.py
src/ghostdq/export/: __init__.py  client.py  constants.py  exceptions.py
src/ghostdq/metrics/: __init__.py  accumulators.py  arrow.py  checks.py  duckdb_engine.py  engine.py  plans.py  polars_engine.py  router.py  streaming.py
src/ghostdq/reading/: __init__.py  pandas.py  types.py
tests/: conftest.py  test_cli.py  test_client.py  test_contract.py  test_evaluate.py  test_io_pandas.py  test_metrics.py
tests/cli/: conftest.py  test_run.py
tests/contract/: test_parser.py
tests/evaluation/: test_evaluator.py
tests/export/: test_client.py
tests/metrics/: test_arrow.py  test_duckdb_engine.py  test_engine.py  test_polars_engine.py  test_router.py  test_streaming.py
tests/reading/: conftest.py  test_pandas.py
